--- a/src/implementations/vanilla/components/site-header/site-header-eu.scss
+++ b/src/implementations/vanilla/components/site-header/site-header-eu.scss
@@ -207,6 +207,7 @@ $_search-width-xl: 31.5rem;
   color: map.get(theme.$color, 'white');
   font: map.get(theme.$font-prolonged, 'xl');
   font-weight: map.get(theme.$font-weight, 'bold');
+  margin-right: map.get(theme.$spacing, '3xl');
   padding: 0;
 }
 
@@ -290,6 +291,7 @@ $_search-width-xl: 31.5rem;
     align-self: center;
     color: map.get(theme.$color, 'grey-80');
     flex-grow: 1;
+    margin-right: 0;
     padding: map.get(theme.$spacing, 'm') 0;
   }
 
